# The-WiLi-Watch-mhacks24

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  lightoff.cpp  lighton.cpp  main_file.py  sendir.cpp  speech_to_text.py  test.py  unlockdoor.cpp  weather.cpp
cartesia/: text-to-speech.py
freewili/: CMakeLists.txt  fwwasm.cpp  fwwasm.h  lighton.cpp  listen.cpp  lockdoor.cpp  opencal.cpp  removescript.cpp  showcam.cpp
grok/: speech_to_text.py
groq/: speech_to_text.py
if_sensor/: if_sensor.ino
myenv/: pyvenv.cfg
